@@ -87,8 +87,8 @@ TEXT
       inject_into_file 'config/environments/production.rb', mandrill_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
     end
     ### GIT
-    git :add => '.' if prefer :git, true
-    git :commit => "-aqm 'rails_apps_composer: set email accounts'" if prefer :git, true
+    git :add => '-A' if prefer :git, true
+    git :commit => "-qm 'rails_apps_composer: set email accounts'" if prefer :git, true
 end # after_bundler
 
 __END__
