@@ -86,8 +86,8 @@ after_everything do
   gsub_file 'config/routes.rb', /  #.*\n/, "\n"
   gsub_file 'config/routes.rb', /\n^\s*\n/, "\n"
   # GIT
-  git :add => '.' if prefer :git, true
-  git :commit => "-aqm 'rails_apps_composer: extras'" if prefer :git, true
+  git :add => '-A' if prefer :git, true
+  git :commit => "-qm 'rails_apps_composer: extras'" if prefer :git, true
 end
 
 ## GITHUB
