@@ -51,8 +51,8 @@ RUBY
   end
   remove_file 'app/assets/stylesheets/application.css'
   ### GIT ###
-  git :add => '.' if prefer :git, true
-  git :commit => "-aqm 'rails_apps_composer: front-end framework'" if prefer :git, true
+  git :add => '-A' if prefer :git, true
+  git :commit => "-qm 'rails_apps_composer: front-end framework'" if prefer :git, true
 end # after_bundler
 
 __END__
