@@ -113,8 +113,8 @@ gems.each do |g|
 end
 
 ## Git
-git :add => '.' if prefer :git, true
-git :commit => "-aqm 'rails_apps_composer: Gemfile'" if prefer :git, true
+git :add => '-A' if prefer :git, true
+git :commit => "-qm 'rails_apps_composer: Gemfile'" if prefer :git, true
 
 ### CREATE DATABASE ###
 after_bundler do
@@ -151,8 +151,8 @@ after_bundler do
   run 'bundle exec rake db:create:all' unless prefer :orm, 'mongoid'
   run 'bundle exec rake db:create' if prefer :orm, 'mongoid'
   ## Git
-  git :add => '.' if prefer :git, true
-  git :commit => "-aqm 'rails_apps_composer: create database'" if prefer :git, true
+  git :add => '-A' if prefer :git, true
+  git :commit => "-qm 'rails_apps_composer: create database'" if prefer :git, true
 end # after_bundler
 
 ### GENERATORS ###
@@ -170,8 +170,8 @@ after_bundler do
     end
   end
   ## Git
-  git :add => '.' if prefer :git, true
-  git :commit => "-aqm 'rails_apps_composer: generators'" if prefer :git, true
+  git :add => '-A' if prefer :git, true
+  git :commit => "-qm 'rails_apps_composer: generators'" if prefer :git, true
 end # after_bundler
 
 __END__
